--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "request": "^2.88.2",
     "truffle-contract": "^4.0.31",
     "truffle-hdwallet-provider": "^1.0.17",
+    "truffle-hdwallet-provider-klaytn": "^1.4.2",
     "web3": "^1.3.0"
   }
 }
